# nRFLEAudioUnicast

./: LICENSE  README.md  prj.conf
boards/: nrf5340_audio_dk_nrf5340_cpuapp.overlay
src/audio/: audio_system.c
src/bluetooth/: CMakeLists.txt
src/bluetooth/bt_management/: bt_mgmt.c
src/drivers/: cs47l63_comm.c
src/utils/: board_version.c
tools/buildprog/: nrf5340_audio_dk_devices.json
unicast_server/: main.c
